# fastapi-tdd-docker

./: README.md  docker-compose.yml
.github/workflows/: main.yml
project/: Dockerfile  Dockerfile.prod  pyproject.toml
project/app/: config.py  db.py  main.py
project/app/api/: crud.py  ping.py  summaries.py
project/db/: create.sql
project/tests/: conftest.py  test_ping.py  test_summaries.py
