[tool.poetry]
name = "fastapi-tdd-docker"
version = "0.1.0"
description = ""
authors = ["César Castañón <cesar.castares@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.65.3"
uvicorn = "0.14.0"
pydantic = "^1.8.2"
asyncpg = "0.23.0"
tortoise-orm = "0.17.4"
aerich = "0.5.3"
requests = "2.25.1"
gunicorn = "20.1.0"
pytest = "6.2.4"

[tool.poetry.dev-dependencies]
pytest-cov = "^4.0.0"
flake8 = "^5.0.4"
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
